# audioLibrary

./: AlsaMicrophone.cpp  AlsaMicrophone.h  AlsaMicrophoneConfig.cpp  AlsaMicrophoneConfig.h  AlsaSpeaker.cpp  AlsaSpeaker.h  AudioInterface.h  AudioOuptputQueue.h  AudioQueue.cpp  AudioQueue.h  CMakeLists.txt  SynchornizedRingBuffer.h  main.cpp
src/: CMakeLists.txt  main2.cpp
src/AudioConfiguration/: AlsaBaseConfig.cpp  AlsaBaseConfig.h  CMakeLists.txt
src/AudioIn/: CMakeLists.txt
src/AudioOut/: AlsaSpeaker.h  CMakeLists.txt
src/Utilities/: AudioInterface.h  AudioOuptputQueue.cpp  CMakeLists.txt  SynchronizedQueue.h
